--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-asgiref==3.7.2
-cffi==1.15.1
-charset-normalizer==3.1.0
-cryptography==41.0.1
 Django==4.2.2
 djangorestframework==3.14.0
 pdfminer.six==20221105
-pycparser==2.21
-pycryptodome==3.18.0
-pytz==2023.3
-sqlparse==0.4.4
-typing_extensions==4.7.0
+requests==2.31.0
